<resources>
    <string name="app_name">ICP_Commons</string>
    <string name="alert_dialog_tituloCustom_text"> Mi mensaje custom </string>
    <string name="alert_dialog_buttons_tituloCustom_text"> Consulta Inventario </string>
    <string name="submit"> Submit </string>
    <string name="cancel"> Cancel </string>
    <string name="si"> Si </string>
    <string name="no"> No </string>
    <string name="fragment_progress_bar_txtSalvando_text"> Salvando </string>
    <string name="fragment_progress_bar_txtPorcentajeProgress_text"> 48% </string>
    <string name="custom_notification_maximizar">" ---------- Deslice hacia abajo para minimizar ---------- "</string>
    <string name="custom_notification_minimizar">" ---------- Deslice hacia arriba para maximizar ---------- "</string>
    <string name="texto_notification_inventario">"Se ha detectado un inventario activo. ¿Quiere continuar con las lecturas?"</string>
    <string name="button_notification_inventario">"Continuar"</string>
    <string name="multi_spinner_sin_informacion">Sin información seleccionable…</string>
    <string name="multi_spinner_seleccione">Seleccione</string>
    <string name="cargando"> Cargando </string>
    <string name="obteniendo_informacion"> Obteniendo información… </string>
    <string name="subiendo_acciones_pendientes_offline">Subiendo acciones pendientes offline</string>
    <string name="atenci_n">atención</string>
    <string name="imagen_cabecera_dialogo">imagen_cabecera_dialogo</string>
    <string name="aceptar">Aceptar</string>
    <string name="deslice_hacia_abajo_para_minimizar">---------- Deslice hacia abajo para minimizar ----------</string>
    <string name="texto_de_ejemplo_esto_es_un_texto_de_ejemplo">Texto de ejemplo. Esto es un texto de ejemplo.</string>
    <string name="contacte_administrador_error">, contacte con un administrador del sistema.</string>
    <string name="custom_notification_no_progress">La notificación no permite progress</string>
    <string name="custom_notification_no_simple">La notificación no permite simple</string>
    <string name="custom_smart_dialog_aceptar">ACEPTAR</string>
    <string name="custom_smart_dialog_cancelar">CANCELAR</string>
    <string name="custom_smart_dialog_si">SI</string>
    <string name="custom_smart_dialog_no">NO</string>
    <string name="custom_smart_dialog_atencion">Atención</string>
    <string name="cargando_espere_porfavor">Cargando... Espere por favor.</string>
    <string name="dialog_visor_imagenes_adjuntar_imagen">ADJUNTAR IMAGEN</string>
    <string name="eliminar_imagen">ELIMINAR IMAGEN</string>
    <string name="geocoder_no_pudo_obtener_ubicacion">El GPS no pudo obtener la última ubicación conocida</string>
    <string-array name="array_name">
        <item>Equipos</item>
        <item>Tarjetas</item>
        <item>Objetos conectados</item>
        <item>Fijo/Router</item>
    </string-array>

    <string name="search_hint">Buscar</string>
    <string name="action_back">Atras</string>
    <string name="action_voice_search">Busuqeda Voz</string>
    <string name="action_clear_search">Limpiar Busqueda</string>
    <string name="background_location_permission_message"><b>Allow only while using the app</b> permission has been granted. If you want
        to get location updates in the background even when not using the app then grant<b>Allow all the time</b> permission </string>
</resources>
