<?xml version="1.0" encoding="utf-8" standalone="no"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/touchListenerLayout"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:id="@+id/notificationBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/rounded_white_button"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/txtDeslizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deslice_hacia_abajo_para_minimizar"
            android:textSize="8sp"
            android:textColor="@color/colorNotification"
            android:textScaleX="1"
            android:textAlignment="center"
            android:layout_marginBottom="2dp"
            android:background="@color/colorAccent"
            tools:ignore="SmallSp" />

        <LinearLayout
            android:id="@+id/linear_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtDecripcion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fragment_progress_bar_txtSalvando_text"
                    android:textSize="12sp" />

                <ProgressBar
                    android:id="@+id/loaderIcon"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:indeterminate="true" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:max="100"
                android:progress="20"
                android:progressDrawable="@drawable/custom_progress_bar" />

            <TextView
                android:id="@+id/txtPorcentajeProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/fragment_progress_bar_txtPorcentajeProgress_text"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
